--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </div>
 
   <div class="img">
-    <img src="/image/1.JPG" alt="" srcset="">
+    <img src="image/1.JPG" alt="" srcset="">
   </div>
    <!-- end of admin -->
  </div>
@@ -68,7 +68,7 @@
 </div>
 <div class="about">
 
-  <img src="/image/2.JPG" alt="">
+  <img src="image/2.JPG" alt="">
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat quibusdam cumque modi. Facere, eligendi aliquam enim animi aspernatur repudiandae alias, quae, blanditiis molestiae debitis earum? Iure beatae excepturi non, delectus veniam et tempora reiciendis sequi doloremque sint inventore similique autem nesciunt quisquam distinctio laboriosam numquam veritatis fugit nihil. Adipisci, magnam.</p>
 </div>
 
