--- a/index.html
+++ b/index.html
@@ -97,5 +97,9 @@
  </div>
 
 <img src="burgur.jpg" alt="">
+
+<div class="add">
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod provident, facilis optio deserunt vel magni harum, saepe consectetur aut rerum reiciendis illum sequi quisquam praesentium. Dolore reiciendis laudantium explicabo quam repellendus maxime sed totam veniam sunt, maiores rerum quaerat labore.</p>
+</div>
 </body>
 </html>
